# sistema/backend/src/main/resources/swagger.yaml
@@ -51,27 +51,15 @@ paths:
       responses:
         201:
           description: Credentials have been sent
-#        400:
-#          description: Invalid email format (missing '@', '.', or '.gmail')
-#          content:
-#            application/json:
-#              schema:
-#                $ref: './dtos/response/error-response.yaml#/components/schemas/ErrorResponse'
-#        409:
-#          description: Vacancy is already full
-#          content:
-#            application/json:
-#              schema:
-#                $ref: './dtos/response/error-response.yaml#/components/schemas/ErrorResponse'
-#        424:
-#          description: Gmail API error (bad gateway)
-#          content:
-#            application/json:
-#              schema:
-#                $ref: './dtos/response/error-response.yaml#/components/schemas/ErrorResponse'
-#        500:
-#          description: Internal server error
-#          content:
-#            application/json:
-#              schema:
-#                $ref: './dtos/response/error-response.yaml#/components/schemas/ErrorResponse'
+        400:
+          description: Invalid email format (missing '@', '.', or '.gmail')
+          content:
+            application/json:
+              schema:
+                $ref: './dto/response/error-response.yaml#/components/schemas/ErrorResponse'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: './dto/response/error-response.yaml#/components/schemas/ErrorResponse'
